# datadog-cost-datalake

./: .env.example  .gitignore  Doc_Tecnico_datadog-cost-datalake.docx  Flow_datadog-cost-datalake.html  README.md  pyproject.toml
databricks/notebooks/: 01_bronze_ingest.py  02_silver_transform.py  03_gold_dashboard.py
extractor/: datadog_client.py  s3_loader.py
loader/: pipeline.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_datadog_client.py
